# pixie

./: Cargo.toml  README.md
examples/adjusted-resolution/: script.sh
examples/basic/: script.sh
examples/custom-palette/: script.sh
src/: main.rs
