[package]
name = "pixie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
csscolorparser = "0.6.2"
futures = "0.3.28"
image = "0.24.7"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
serde_json = "1.0.107"
log = "0.4.20"
